--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,10 @@ output:
 # Github
 [When github won't push and returns a permission denied public key error](https://help.github.com/en/articles/error-permission-denied-publickey)
 
+# Data Import
+[How to tranfer data from Google to R](https://cran.r-project.org/web/packages/googlesheets/vignettes/basic-usage.html)  
+- 
+
 # RMarkdown
 [How to call an external R script from within an Rmarkdown document](https://yihui.name/knitr/demo/externalization/)  
 - Add a tag to the R script so knitr can find it.  It must be in the '## ---- tag' format.  
